--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -28,6 +28,9 @@
     .btn-wig {
         width: 202px;
     }
+    .btn-subscribe {
+    margin-top: 10px;
+}
 }
 
 /* Regular smart phones, including iPhone 6 + with 414px viewport! */
